tests/evaluate/success/recursivecall.src
// This is to test that we are able to recursively call functions.
recursive(a) {
    if ($a >= 0) {
        print $a;
        a = $a - 1;
        recursive(a);
    } else {};
}

main() {
    var a = 5;
    recursive(a);
}
